--- a/trailFinder/src/styles/login.css
+++ b/trailFinder/src/styles/login.css
@@ -1,17 +1,23 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+.login-main {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .page-wrapper {
@@ -40,6 +46,11 @@ footer {
   background-color: #eee;
   padding: 1rem;
   text-align: center;
+  transform: none !important;
+}
+
+header {
+    transform: none !important;
 }
 
 .login-container {
@@ -49,6 +60,8 @@ footer {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 320px;
   text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .login-container h2 {
