fixed favoriting bug

--- a/trailFinder/src/styles/main.css
+++ b/trailFinder/src/styles/main.css
@@ -454,7 +454,7 @@ header p {
 .card-rating {
     margin-left: auto;
     /* Equivalent to ml-auto */
-    color: #f59e0b;
+    color: #a36907;
     /* Equivalent to text-yellow-500 */
 }
 
